fix issue#7:Card view layout broken for certain container types

--- a/css/cardstyle.css
+++ b/css/cardstyle.css
@@ -23,11 +23,13 @@ div.g {
 .g {
     background: white;
     padding: 25px;
+		width: 100%;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px !important;
     margin-right: 0;
     transition: box-shadow 0.5s;
     position: relative;
+		border-radius: 4px;
 }
 
 .g:hover {
@@ -123,10 +125,11 @@ h3.r:after {
 #center_col .kp-blk {
     margin-left: 0;
     margin-right: 0;
+		width: 100% !important;
 }
 
 .kno-ftr {
-    margin: 0 -35px 0 -8px;
+    margin-right: 0 !important;
     padding: 4px 40px 0;
 }
 
@@ -150,6 +153,7 @@ h3.r:after {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     transition: all 0.5s;
     position: relative;
+		border-radius: 4px;
 }
 
 #botstuff:hover {
@@ -291,4 +295,8 @@ g-more-link * {
 
 ._Ncr {
     margin: 0 !important;
+}
+
+.sfbgg, .qmv19b {
+	background-color: #fff;
 }
